[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pocket-graph"
version = "0.1.0"
description = "Knowledge graph builder for personal corpora — code, docs, papers in one queryable graph"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.21",
    "networkx>=3.1",
    # pypdf — required for the Claude Code SKILL flow. When the user runs
    # `/pocket-graph <arxiv-url>`, the LLM reads the downloaded PDF via
    # Claude Code's native read tool, which depends on pypdf. Optional
    # made too many users hit a silent failure on first paper ingest.
    # (PyMuPDF is in the [pdf] extra for users who want to call our own
    # extract_pdf CLI — most paper-vault users don't need it.)
    "pypdf>=4.0",
]

[project.optional-dependencies]
# Core languages — install at least one for code extraction to work
languages = [
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-ruby",
    "tree-sitter-c-sharp",
    "tree-sitter-kotlin",
    "tree-sitter-scala",
    "tree-sitter-swift",
    "tree-sitter-php",
    "tree-sitter-lua",
    "tree-sitter-zig",
    "tree-sitter-julia",
    "tree-sitter-elixir",
    "tree-sitter-powershell",
    "tree-sitter-objc",
    "tree-sitter-verilog",
    "tree-sitter-svelte",
    "tree-sitter-sql",
    "tree-sitter-bash",
]
# PyMuPDF for users who want pocket-graph's own extract_pdf CLI (rare —
# most users let the SKILL+LLM read PDFs directly via pypdf, which is in
# base). Install with `pip install pocket-graph[pdf]`.
pdf = ["PyMuPDF>=1.23"]
office = ["python-docx>=1.0", "openpyxl>=3.1"]
mcp = ["mcp>=0.9"]
watch = ["watchdog>=3.0"]
all = ["pocket-graph[languages,pdf,office,mcp,watch]"]

[project.scripts]
pocket-graph = "pocket_graph.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pocket_graph*"]

[tool.setuptools.package-data]
pocket_graph = ["skill_assets/*.md"]
